--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 	<h1>I'm Md Morshedul Islam</h1>
+	<small>Web Designer | Blogger</small>
 	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ex nemo eum laudantium reiciendis nostrum quia voluptatem tempora repudiandae similique deserunt expedita at assumenda dolores, praesentium aperiam, adipisci quas dicta saepe dolore odit quidem harum nam mollitia! Obcaecati quam laboriosam totam vitae, recusandae corporis, deserunt dolores optio fugit temporibus ipsa.</p>
-	
+
 </body>
 </html>
